# human-action

./: .gitignore  Dockerfile  ISSUE_REGEX_BUG.md  README.md  audio_chunk_generator.py  audio_concatenator.py  chunker_splitter.py  cli.py  config.py  config.yaml  docker-compose.yml  espeak_audio_chunk_generator.py  espeak_progress.json  generate_espeak_audio.py  hybrid-quality-plan.md  main.py  next-chapter-audio-plan.md  pdf_extractor.py  pipeline.py  pipeline_state.json  processors.py  pyproject.toml  pyrightconfig.json  requirements.txt  run_tests.py  simple_tts.py  text_optimizer.py
.cursor/rules/: audio-generation-master.mdc  elevenlabs-audio-file-management.mdc  elevenlabs-audio-optimization.mdc  elevenlabs-audio-post-processing.mdc  elevenlabs-content-structuring.mdc  elevenlabs-cost-optimization-analysis.mdc  elevenlabs-czech-preprocessing.mdc  elevenlabs-economic-terminology.mdc  elevenlabs-master-orchestration.mdc  elevenlabs-narrative-flow-optimization.mdc  elevenlabs-prepare-next-chapter.mdc  elevenlabs-pronunciation-dictionary-generator.mdc  hybrid-quality-strategy.mdc  prepare-next-chapter-for-audio-voice-synthesis.mdc  progressive-enhancement-strategy.mdc
.github/workflows/: docker-build.yml  security-scan.yml  test.yml
audio_test/: test.html
data/2-markdown-chapters/: chapter_01.md  chapter_02.md  chapter_03.md  chapter_04.md  chapter_05.md  chapter_06.md  chapter_07.md  chapter_08.md  chapter_09.md  chapter_10.md  chapter_100.md  chapter_101.md  chapter_102.md  chapter_103.md  chapter_104.md  chapter_105.md  chapter_106.md  (+175 more)
docs/: tts.md
scripts/: concatenate_chapters.py  organize_audio.py  separate_paragraphs.py  test-container.sh
tests/: README.md  conftest.py  test_audio_concat.py  test_audio_generator.py  test_audio_paths.py  test_simple_tts.py  test_tts_data.md
utils/: progress_tracker.py
(+6664 files in other folders)
